2021-08-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
      * fix various issues suggested by Will Landau

2020-4-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
      * DESCRIPTION: add BugReports and change LICENSE to GPL >=3

2016-8-20 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.6-1
    * R/jagsParalle: add requireNamespace("coda")

2015-8-22 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.5-7
    * NAMESPACE: add more import
    * R/jagsParalle: pass data into Glob.env


2015-4-19 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.5-5
    * DESCRIPTION: SystemRequirements: JAGS (http://mcmc-jags.sourceforge.net)
    * DESCRIPTION: detailed description about R2jags.

2015-3-5 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * man/jags: comment out xyplot and densityplot from example code to avoid from importing lattice library.

2015-1-9 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * man/jags: add description for export_obj_name.
    * R/jagsParallel: add new parameter export_obj_name. Allow users to export other objects to the cluster.

2014-6-19 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-03
    * R/jags: add parameters jags.module to handle module to be loaded.

2014-5-30 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-02
    * R/jags: update the method for generating Random.seed in jags()
    * R/jagsParallel:
        1. pass envir parameters, now can handle complex data
        2. fix a bug when passing model file as a function into jags.parallel()


2014-2-26 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-01
    * R/as.mcmc: fix counter error in update and autoupdate
    * R/update: fix counter error in update and autoupdate

2014-1-18 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-12
    * R/as.mcmc: fix a bug of casuing false convergence when n.chains==1
