@@ -1,3 +1,9 @@
+2024-03-31 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
+    * DESCRIPTION (Version, Date): 0.8-2
+    * incorporate patches suggested by CRAN
+    * R/as.bugs.array2: add a patch to cases where levels of categorical variables have missing.
+    * NAMESPACE: fix issues between Author and Authro@R
+
 2021-08-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
       * fix various issues suggested by Will Landau
 
